<resources>
    <string name="app_name">FDMA</string>
    <string name="connected_with_arduino">Connected</string>
    <string name="not_connected_with_arduino">Not Connected</string>
    <string name="gps_tracking">GPS Tracking</string>
    <string name="change_pin">Change PIN</string>
    <string name="view_logs">View Logs</string>
    <string name="gps_title">Wheelchair Longitude and Latitude</string>
    <string name="longitude">Current Longitude:</string>
    <string name="latitude">Current Latitude:</string>
    <string name="back">Back</string>
    <string name="help">Help</string>
    <string name="pairingEnglishGuide">Pairing the smartphone \nto the Arduino: \n1.Make sure the Arduino chipset is powered on. \n2.Find the "FDMA" in the Bluetooth available. \n3.Connect with Arduino chipset using the 6 digit pairing key.</string>
    <string name="settingEnglishGuide">Setting up the FDMA: \n1.Make sure that the wheelchair user is seated. \n2. Hanapin ang "FDMA" sa magagamit na Bluetooth. \n3.Make sure the wheelchair users is seating comfortably and put on the adjustable external seatbelt.</string>
    <string name="pairingFilipinoGuide">Pagpapares sa smartphone \nsa Arduino: \n1. Siguraduhin na ang Arduino chipset ay pinapagana. \n2.Find the "FDMA" in the Bluetooth available. \n3.Kumonekta sa Arduino chipset gamit ang 6 digit na key ng pagpapares.</string>
    <string name="settingFilipinoGuide">Pagse-set up ng FDMA: \n1.Tiyaking nakaupo ang gumagamit ng wheelchair. \n2.I-on ang system ng Arduino na naka-plugin sa power bank o gumagamit ng power cord. \n3.Tiyaking nakaupo ang gumagamit ng wheelchair komportable at isusuot ang naaayos na panlabas seatbelt.</string>
    <string name="example">Example:</string>
    <string name="example_txt">14.559913, 121.007955</string>
    <string name="enter_old_pin">Enter old PIN: </string>
    <string name="enter_new_pin">Enter new PIN: </string>
    <string name="confirm_pin">Confirm PIN: </string>
    <string name="proceed">Proceed</string>
</resources>