<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A3B29"
    tools:context=".changepin.ChangePin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1A3B29"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/et_old_pin"
            android:layout_width="309dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/enter_old_pin"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.481" />

        <EditText
            android:id="@+id/et_new_pin"
            android:layout_width="309dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/enter_new_pin"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.572" />

        <EditText
            android:id="@+id/et_confirm_pin"
            android:layout_width="309dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/confirm_pin"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.658" />

        <Button
            android:id="@+id/btn_change_pin_proceed"
            android:layout_width="328dp"
            android:layout_height="54dp"
            android:clickable="true"
            android:text="@string/proceed"
            android:textColor="#000000"
            app:backgroundTint="#FAF9F9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.866" />

        <Button
            android:id="@+id/btn_change_pin_back"
            android:layout_width="328dp"
            android:layout_height="54dp"
            android:clickable="true"
            android:text="@string/back"
            android:textColor="#000000"
            app:backgroundTint="#FAF9F9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.946" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="273dp"
        android:layout_height="274dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fall_detection_mobile_application_logo" />

    <TextView
        android:id="@+id/txt_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_connected_with_arduino"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

</androidx.constraintlayout.widget.ConstraintLayout>